--- a/Web/SatisFactory/CSS/index.css
+++ b/Web/SatisFactory/CSS/index.css
@@ -9,7 +9,6 @@
 
 body::-webkit-scrollbar {
     display: none !important; /* Chrome, Safari, Opera*/
-
 }
 
 body {
@@ -20,7 +19,7 @@ body {
   -ms-user-select:none;
   user-select:none;
   -ms-overflow-style: none !important; /* IE and Edge */
-    scrollbar-width: none !important; /* Firefox */
+  scrollbar-width: none !important; /* Firefox */
 }
 
 a{text-decoration: none;}
@@ -66,8 +65,9 @@ li {
   transform: translateX(-50%);
   border-radius: 12px;
   border: 1px solid rgba(255,255,255,0.1);
-  margin-bottom: 200px;
+  height: auto;
   color:black;
+  padding-bottom: 100px;
 }
 
 /* ========================================================================================================= */
@@ -85,7 +85,6 @@ li {
   width: 100%;
   position: relative;
   height: 300px;
-  background-color: yellow;
 }
 
 .titleImageBackground {
@@ -527,6 +526,353 @@ hr {
 .MS_TableDone {color:rgba(255,255,255,0.9)}
 .MS_TableCheck {color : rgba(17, 255, 0, 0.9)}
 
+.HDD_MainDiv {
+  width: 100%;
+  overflow: hidden;
+  height: 740px;
+  margin: 20px 0px;
+}
+
+.HDD_Page {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.HDD_PageButton {
+  width: 35px;
+  height: 35px;
+  background-color: #494949;
+  border-radius: 5px;
+  color:white;
+  display: inline-block;
+  line-height: 35px;
+  cursor:pointer
+}
+
+.HDD_SelectedPageButton {
+  background-color: #0d6ee0;
+}
+
+.HDD_Item_Hidden {
+  display: none;
+}
+
+.HDD_Item, .HDD_Item2 {
+  margin-bottom: 5px;
+  height: 240px;
+  border : 1px solid #c6c6c6;
+  overflow: hidden;
+  position: relative;
+  transition: 0.2s;
+}
+
+.HDD_Item {
+  cursor:pointer;
+}
+
+
+.HDD_ItemImg {
+  opacity: 0.7;
+  filter:blur(1px) grayscale(80%);
+  margin: 100;
+  left:20px;
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  transition: 0.2s;
+}
+
+.HDD_Item img {
+  width: 100%;
+  height: 100%;
+}
+
+.HDD_ItemBody {
+  display: block;
+  position: absolute;
+  height: calc(100% - 20px);
+  top:10px;
+  width: calc(100% - 380px);
+  right:20px;
+  overflow-x : hidden;
+  overflow-y: auto;
+}
+
+.HDD_ItemBody::-webkit-scrollbar {
+  width: 6px;
+}
+.HDD_ItemBody::-webkit-scrollbar-thumb {
+  background-color: #c6c6c6;
+}
+.HDD_ItemBody::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+
+
+.HDD_ItemName {
+  display: inline-block;
+  font-size: 30px;
+  transition: 0.5s;
+}
+
+.HDD_ItemEnglish {
+  display: inline-block;
+  font-size: 10px;
+  color:#8a8a8a;
+  margin-left: 10px;
+}
+
+.HDD_ItemTable {
+  width: 100%;
+}
+
+.HDD_ItemTable td {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  background-color: #f2f2f2;
+  transition:0.4s;
+}
+
+.HDD_ItemTable td:first-child {
+  width: 80px;
+  background-color: #cdcdcd;
+}
+
+.HDD_ItemTableHead td {
+  background-color: #cdcdcd;
+  color:white;
+}
+
+.HDD_Item_hover {
+  border : 1px solid #0080ff;
+}
+
+.HDD_Item_hover .HDD_ItemName {
+  color:#0095ff;
+}
+
+.HDD_Item_hover .HDD_ItemImg {
+  opacity: 0.9;
+  filter:blur(0px) grayscale(0%);
+  left:20px;
+  width: 320px;
+  height: 320px;
+}
+
+.HDD_Item_hover .HDD_ItemTable td {
+  background-color: #f2f2f2;
+}
+
+.HDD_Item_hover .HDD_ItemTable td:first-child {
+  background-color: #9dc9dc;
+}
+
+.HDD_Item_hover .HDD_ItemTableHead td {
+  background-color: #9dc9dc;
+}
+
+.efficiency, .notEfficiency {
+  display: inline-block;
+  padding-left: 15px;
+  padding-right: 15px;
+  border-radius: 25px;
+  background-color: rgb(137, 14, 14);
+  color:white;
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+.efficiency {background-color: #2f7220;}
+
+.HDD_Item2 { opacity: 0.8; transition: 0.3s; cursor:not-allowed}
+.HDD_Item2_Hover { opacity: 1;}
+
+.HDD_Item2 table {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.HDD_Item2 i, .HDD_Item2 span {
+  display: block;
+  font-size: 20px;
+}
+
+.HDD_Item2 i {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+.HDD_Item2 {
+  background-color: #dfdfdf;
+  color:#b3b3b3;
+  vertical-align: middle;
+}
+
+.Map_Image {
+  width: 100%;
+  margin: 20px 0px;
+}
+
+.NoteTable {
+  width: 100%;border-collapse: collapse;
+  margin: 20px 0px 50px 0px;
+}
+
+.NoteTable tr {
+  border-bottom : 1px solid #eaeaea;
+  line-height: 40px;
+  cursor:pointer
+}
+
+.NoteTable tr:first-child {
+  border-top : 1px solid #eaeaea;
+  cursor: default;
+  line-height: 40px;
+  background-color:  #f1f1f1;
+}
+
+.NoteTable tr td {
+  padding-left: 5px;
+  text-align: center;
+}
+
+.Note_Title {
+  text-align: left !important;
+}
+
+.NoteTable tr:hover {
+  background-color:  #f7f7f7;
+}
+
+.NoteImageDiv {
+  overflow: hidden;
+  margin: 0; padding:0;
+  height: 0px;
+  transition: 0.5s;
+}
+
+.NoteImageTD:hover {
+  background: #FFFFFF;
+}
+
+.NoteImageTD img {
+  width: 80%;
+}
+
+.NoteShow {
+  height: 560px !important;
+}
+
+.NoteShow2 {
+  background-color: #a7d8eb !important;
+}
+
+
+.screenshot_CardDiv {
+  width: calc(33.33% - 5px);
+  overflow: hidden;
+  height: 15vw;
+  max-height: 300px;
+  float: left;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  cursor:pointer;
+  position: relative;
+  border-radius: 5px;
+}
+
+.screenshot_CardDiv img {
+  width: 150%;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top:50%;
+  transition: 0.3s;
+  filter : brightness(50%);
+}
+
+.screenshot_CardDiv_hover img {
+  width: 180%;
+}
+
+.screenshot_NoPicture {
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top:50%;
+  transition: 0.3s;
+  width: 100%; height: 100%;
+  background-color: #d6d6d6;
+  color:#707070;
+  text-align: center;
+}
+
+.screenshot_CardDiv_hover .screenshot_NoPicture {
+  background-color: #bfbfbf;
+  cursor: progress;
+}
+
+.screenshot_NoPicture i, .screenshot_NoPicture span{
+  display: block;
+}
+
+.screenshot_NoPicture i {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.screenshot_CardTitle {
+  position: absolute;
+  font-size: 20px;
+  color:white;
+  top:20px;
+  left:20px;
+}
+
+.screenshot_SubTitle {
+  position: absolute;
+  font-size: 14px;
+  color:white;
+  top:55px;
+  left:20px;
+  border-top: 1px solid white;
+  padding-top : 5px;
+  padding-right : 20px;
+}
+
+.DesktopShow {display: block;}
+.MobileShow {display: none;}
+.screenshot_PageButton {
+  margin: 20px 0px 8px 0px;
+}
+
+.screenshot_PageButton {
+  display: inline-block;
+  text-align: center;
+  height: 50px;
+  line-height: 50px;
+  font-size: 18px;
+  float:left;
+  cursor: pointer;
+  transition: 0.2s;
+  overflow: hidden;
+  border-top : solid 1px #d6d6d6;
+  border-bottom : solid 1px #d6d6d6;
+}
+
+.screenshot_Clickable { background-color: #eaeaea; }
+.screenshot_Clickable:hover { background-color: #e0e0e0; }
+
+.screenshot_NoneClickable { background-color: #cfcfcf; cursor:not-allowed; color:#a9a9a9 }
+.screenshot_NoneClickable:hover { background-color: #dbdbdb; }
+
+.screenshot_Clicked { background-color: #a5d0ed; cursor:not-allowed; color:#0f4084 }
+.screenshot_Clicked:hover { background-color: #82afcc; }
+
 /* ========================================================================================================= */
 /*  모바일 버전 코드                                                                                             */
 /* ========================================================================================================= */
@@ -627,7 +973,7 @@ hr {
   }
 
   .MileStoneMonitor_Web {
-    height: 700px;
+    height: 750px;
   }
 
   .MileStoneSiderBarButton{
@@ -703,4 +1049,126 @@ hr {
     top:5px !important;
     text-align: right;
   }
+
+  .HDD_ItemImg {
+    margin: 100;
+    left:10px;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    transition: 0.2s;
+    opacity: 1;
+    filter: grayscale(80%);
+    z-index: 2;
+  }
+
+  .HDD_MainDiv {
+    height: 920px;
+  }
+
+  .HDD_Item, .HDD_Item2 {
+    height: 300px;
+  }
+
+  .HDD_ItemBody {
+    display: block;
+    position: absolute;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    right:5px;
+    overflow-x : hidden;
+    overflow-y: auto;
+    padding:10px;
+    transition: 0.2s;
+  }
+
+  .HDD_ItemName {
+    display: block;
+    line-height: 35px;
+    font-size: 24px;
+    margin-left: 135px;
+  }
+
+  .HDD_ItemEnglish {
+    display: block;
+    line-height: 20px;
+    font-size: 14px;
+    margin-left: 135px;
+    margin-bottom: 20px;
+  }
+
+  .HDD_Item_hover .HDD_ItemBody {
+    opacity: 0.95;
+    background-color: #FFFFFFFF;
+  }
+
+  .HDD_Item_hover .HDD_ItemImg {
+    width: 135px;
+    height: 135px;
+    filter: grayscale(10%);
+    left:5px;
+  }
+
+  .NoteTable {font-size:12px;}
+
+  .NoteTable tr td:first-child, 
+  .NoteTable tr td:nth-child(3){
+    display:none;
+  }
+ 
+  .NoteImageTD {
+    display: table-cell !important;
+  }
+
+  .NoteImageDiv {
+    height: 0vw;
+  }
+
+  .NoteShow {
+    height: 40vw !important;
+  }
+
+  .screenshot_NoPicture {
+    font-size: 12px;
+  }
+
+  .screenshot_NoPicture i {
+    font-size: 18px;
+    margin-bottom: 8px;
+  }
+
+  .screenshot_CardDiv {
+    width: calc(50% - 5px);
+    height: 50vw;
+    max-height: 180px;
+  }  
+
+  .screenshot_CardDiv img {
+    width: 180%;
+    filter : brightness(70%);
+  }
+
+  .screenshot_CardDiv_hover img {
+    width: 220%;
+    filter : brightness(50%);
+  }
+
+  .screenshot_CardTitle {
+    font: 12px;
+    top:10px;
+    left:10px;
+  }
+
+  .screenshot_SubTitle {
+    top:45px;
+    left:10px;
+    font-size: 10px;
+    padding-right:5px;
+    margin-right: 20px;
+    margin-top: 2px;
+    word-break: keep-all;
+  }
+
+  .DesktopShow {display: none;}
+  .MobileShow {display: block;}
 }
