--- a/Web/Valheim/HTML/index.ejs
+++ b/Web/Valheim/HTML/index.ejs
@@ -26,12 +26,23 @@
   <link rel="icon" type="image/png" sizes="96x96" href="../Valheim/IMG/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="../Valheim/IMG/favicon-16x16.png">
   <link rel="manifest" href="../Valheim/IMG/manifest.json">
-  <meta name="msapplication-TileColor" content="#111217">
+  <meta name="msapplication-TileColor" content="#0a0a0a">
   <meta name="msapplication-TileImage" content="../Valheim/IMG/ms-icon-144x144.png">
-  <meta name="theme-color" content="#111217">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
+  <meta name="theme-color" content="#0a0a0a">
+  <!--########################################################################################################################################
+  # 네비게이션 CSS (배경색에 맞는 CSS로 임포트 할 것)
+  ########################################################################################################################################-->
+  <link href="../Main/CSS/navi.css" rel="stylesheet">
+  <link href="../Main/CSS/naviDarkMode.css" rel="stylesheet">
+  <!--####################################################################################################################################-->
+
   <title>머저리 게임크루 : 발헤임 온라인 서버</title>
 </head>
 <body bgcolor="#111217">
+  
+  <%-include('../../Main/HTML/Navi.ejs')%>
+
   <div class="mainDiv">
     <img src="../Valheim/IMG/Logo.png" alt="" class="logo_img">
 
