--- a/Web/SatisFactory/HTML/NotFound.ejs
+++ b/Web/SatisFactory/HTML/NotFound.ejs
@@ -31,14 +31,21 @@
         <meta name="msapplication-TileColor" content="#FFFFFF">
         <meta name="msapplication-TileImage" content="../SatisFactory/IMG/ms-icon-144x144.png">
         <meta name="theme-color" content="#FFFFFF">
+        <!--########################################################################################################################################
+        # 네비게이션 CSS (배경색에 맞는 CSS로 임포트 할 것)
+        ########################################################################################################################################-->
+        <link href="../Main/CSS/navi.css" rel="stylesheet">
+        <!--####################################################################################################################################-->
+
         <title>영찬의 게임일지 : 새티스 팩토리</title>
       </head>
 <body>
+  <%-include('../../Main/HTML/Navi.ejs')%>
 
   <div class="mainDiv">
     <img src="../SatisFactory/IMG/SatisFactoryLogoTransparent.png">
     <div class="titleDiv">영찬의 게임일지 : SATIS FACOTRY</div>
-    <i class="fa-solid fa-skull-crossbones"></i>
+    <i class="fa-solid fa-skull-crossbones anim"></i>
     <span>404 Not Found</span>
     <div class="GoToHome" id="GoToHome">홈으로</div>
     <script language="javascript">
