--- a/Web/SatisFactory/HTML/NotFound.ejs
+++ b/Web/SatisFactory/HTML/NotFound.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta charset="utf-8" />
-        <meta property="og:image" content="http://ngc-valheim.xyz/Web/SatisFactory/IMG/Logo2.jpg">
+        <meta property="og:image" content="http://ngc-valheim.xyz/Web/SatisFactory/nerdgamecrew.link/Logo2.jpg">
         <meta property="og:title" content="영찬의 게임 일지">
         <meta property="og:description" content="영찬의 게임일지 : 새티스 팩토리">
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
@@ -13,23 +13,23 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../SatisFactory/CSS/NotFound.css">
-        <link rel="apple-touch-icon" sizes="57x57" href="../SatisFactory/IMG/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="../SatisFactory/IMG/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="../SatisFactory/IMG/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="../SatisFactory/IMG/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="../SatisFactory/IMG/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="../SatisFactory/IMG/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="../SatisFactory/IMG/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="../SatisFactory/IMG/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="../SatisFactory/IMG/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="../SatisFactory/IMG/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../SatisFactory/IMG/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="../SatisFactory/IMG/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../SatisFactory/IMG/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="../SatisFactory/nerdgamecrew.link/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="../SatisFactory/nerdgamecrew.link/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="../SatisFactory/nerdgamecrew.link/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="../SatisFactory/nerdgamecrew.link/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="../SatisFactory/nerdgamecrew.link/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="../SatisFactory/nerdgamecrew.link/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="../SatisFactory/nerdgamecrew.link/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="../SatisFactory/nerdgamecrew.link/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="../SatisFactory/nerdgamecrew.link/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="../SatisFactory/nerdgamecrew.link/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../SatisFactory/nerdgamecrew.link/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="../SatisFactory/nerdgamecrew.link/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../SatisFactory/nerdgamecrew.link/favicon-16x16.png">
         
-        <link rel="manifest" href="../SatisFactory/IMG/manifest.json">
+        <link rel="manifest" href="../SatisFactory/nerdgamecrew.link/manifest.json">
         <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="../SatisFactory/IMG/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="../SatisFactory/nerdgamecrew.link/ms-icon-144x144.png">
         <meta name="theme-color" content="#FFFFFF">
         <!--########################################################################################################################################
         # 네비게이션 CSS (배경색에 맞는 CSS로 임포트 할 것)
@@ -43,7 +43,7 @@
   <%-include('../../Main/HTML/Navi.ejs')%>
 
   <div class="mainDiv">
-    <img src="../SatisFactory/IMG/SatisFactoryLogoTransparent.png">
+    <nerdgamecrew.link src="../SatisFactory/nerdgamecrew.link/SatisFactoryLogoTransparent.png">
     <div class="titleDiv">영찬의 게임일지 : SATIS FACOTRY</div>
     <i class="fa-solid fa-skull-crossbones anim"></i>
     <span>404 Not Found</span>
