--- a/Web/Valheim/HTML/index.ejs
+++ b/Web/Valheim/HTML/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta charset="utf-8" />
-  <meta property="og:image" content="http://ngc-valheim.xyz/Web/Valheim/IMG/Logo2.jpg">
+  <meta property="og:image" content="http://nerdgamecrew.link/Web/Valheim/IMG/Logo2.jpg">
   <meta property="og:title" content="머저리 게임크루 Valheim 웹서버">
   <meta property="og:description" content="NGC용 Valheim 공식 웹서버">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
@@ -98,7 +98,7 @@
 
     <div class="subDib">
       <span class="titleHeader">실시간 서버 컴퓨팅 현황</span>
-      <iframe src="http://ngc-valheim.xyz:3000/d-solo/NGC/ngc_panel?orgId=1&refresh=1s&panelId=2" width="100%" class="grafana" frameborder="0"></iframe>
+      <iframe src="http://nerdgamecrew.link:3000/d-solo/NGC/ngc_panel?orgId=1&refresh=1s&panelId=2" width="100%" class="grafana" frameborder="0"></iframe>
       <ul>
         <li>Promethus와 Garafana docker 서비스를 통한 컴퓨팅 리소스 현황</li>
       </ul>
