--- a/Web/SatisFactory/HTML/ScreenShot.ejs
+++ b/Web/SatisFactory/HTML/ScreenShot.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta charset="utf-8" />
-        <meta property="og:image" content="http://ngc-valheim.xyz/Web/SatisFactory/IMG/Logo2.jpg">
+        <meta property="og:image" content="http://nerdgamecrew.link/SatisFactory/IMG/Logo2.jpg">
         <meta property="og:title" content="영찬의 게임 일지">
         <meta property="og:description" content="영찬의 게임일지 : 새티스 팩토리">
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
