--- a/Web/Valheim/HTML/index.ejs
+++ b/Web/Valheim/HTML/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta charset="utf-8" />
-  <meta property="og:image" content="http://nerdgamecrew.link/Web/Valheim/IMG/Logo2.jpg">
+  <meta property="og:image" content="http://nerdgamecrew.link/Valheim/IMG/Logo2.jpg">
   <meta property="og:title" content="머저리 게임크루 Valheim 웹서버">
   <meta property="og:description" content="NGC용 Valheim 공식 웹서버">
   <meta name="viewport" content="width=device-width, initial-scale=0.8">
