--- a/Web/Main/HTML/Navi.ejs
+++ b/Web/Main/HTML/Navi.ejs
@@ -21,11 +21,12 @@
         </ul>
       </div>
   
-      <div class="navi_menu_child_div navi_hidden navi_menu_count_3" id="navi_menu_child_2">
+      <div class="navi_menu_child_div navi_hidden navi_menu_count_4" id="navi_menu_child_2">
         <ul>
           <li id="Button_2_1">발헤임</li>
-          <li id="Button_2_2">레프트 4 데드 2</li>
-          <li id="Button_2_3">헬다이버즈</li>
+          <li id="Button_2_2">마인크래프트</li>
+          <li id="Button_2_3">레프트 4 데드 2</li>
+          <li id="Button_2_4">헬다이버즈</li>
         </ul>
       </div>
   
@@ -140,6 +141,7 @@
     let button_2_1 = document.getElementById('Button_2_1')
     let button_2_2 = document.getElementById('Button_2_2')
     let button_2_3 = document.getElementById('Button_2_3')
+    let button_2_4 = document.getElementById('Button_2_3')
     let button_3_1 = document.getElementById('Button_3_1')
     let button_3_2 = document.getElementById('Button_3_2')
     let button_3_3 = document.getElementById('Button_3_3')
@@ -151,7 +153,8 @@
     button_1_1.addEventListener('click',() => {location.href = '/Crew'})
     button_1_2.addEventListener('click',() => {location.href = '/Youtube'})
     button_2_1.addEventListener('click',() => {location.href = '/Valheim'})
-    button_2_2.addEventListener('click',() => {location.href = '/L4D2'})
+    button_2_2.addEventListener('click',() => {location.href = '/Minecraft'})
+    button_2_3.addEventListener('click',() => {location.href = '/L4D2'})
     button_2_3.addEventListener('click',() => {location.href = '/HellDivers'})
     button_3_1.addEventListener('click',() => {location.href = '/SatisFactory'})
     button_3_2.addEventListener('click',() => {location.href = '/Factorio'})
